# docs/swagger.yaml
@@ -1,4 +1,62 @@
 definitions:
+  internal_account.AccountBalanceResponse:
+    properties:
+      account_id:
+        type: string
+      amount:
+        type: number
+    type: object
+  internal_account.AccountDetailResponse:
+    properties:
+      account_id:
+        type: string
+      account_nickname:
+        type: string
+      color:
+        type: string
+      is_main_account:
+        type: boolean
+      progress:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  internal_account.AccountFlagResponse:
+    properties:
+      account_id:
+        type: string
+      flag_id:
+        type: string
+      flag_type:
+        type: string
+      flag_value:
+        type: string
+    type: object
+  internal_account.AccountResponse:
+    properties:
+      account_balance:
+        $ref: '#/definitions/internal_account.AccountBalanceResponse'
+      account_detail:
+        $ref: '#/definitions/internal_account.AccountDetailResponse'
+      account_flag:
+        items:
+          $ref: '#/definitions/internal_account.AccountFlagResponse'
+        type: array
+      account_id:
+        type: string
+      account_number:
+        type: string
+      currency:
+        type: string
+      issuer:
+        type: string
+      status:
+        type: string
+      type:
+        type: string
+      user_id:
+        type: string
+    type: object
   internal_auth.LoginResponse:
     properties:
       access_token:
@@ -31,6 +89,22 @@ definitions:
     required:
     - pin_code
     - user_id
+    type: object
+  internal_banner.BannerResponse:
+    properties:
+      banner_id:
+        type: string
+      description:
+        type: string
+      image:
+        type: string
+      title:
+        type: string
+    type: object
+  internal_user.UserGreetingResponseDTO:
+    properties:
+      greeting:
+        type: string
     type: object
   internal_user.UserResponseDTO:
     properties:
@@ -89,6 +163,66 @@ info:
   title: LINE BK API
   version: "1.0"
 paths:
+  /api/v1/accounts/me:
+    get:
+      consumes:
+      - application/json
+      description: Get account my account
+      parameters:
+      - default: 1
+        description: Page
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Limit
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/line-bk-api_pkg_utils.AppPaginationResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/internal_account.AccountResponse'
+                  type: array
+                limit:
+                  type: integer
+                next_page:
+                  type: integer
+                page:
+                  type: integer
+                prev_page:
+                  type: integer
+                total:
+                  type: integer
+                total_pages:
+                  type: integer
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
+      security:
+      - ApiKeyAuth: []
+      - BearerAuth: []
+      summary: Get account my account
+      tags:
+      - Account
   /api/v1/auth/login/password:
     post:
       consumes:
@@ -140,9 +274,11 @@ paths:
                 message:
                   type: string
               type: object
+      security:
+      - ApiKeyAuth: []
       summary: Login with password
       tags:
-      - auth
+      - Authentication
   /api/v1/auth/login/pin:
     post:
       consumes:
@@ -194,22 +330,24 @@ paths:
                 message:
                   type: string
               type: object
+      security:
+      - ApiKeyAuth: []
       summary: Login with pin code
       tags:
-      - auth
-  /api/v1/users:
+      - Authentication
+  /api/v1/banners:
     get:
       consumes:
       - application/json
-      description: Get a paginated list of users
+      description: Get banner by user id
       parameters:
       - default: 1
-        description: Page number
+        description: Page
         in: query
         name: page
         type: integer
       - default: 10
-        description: Number of items per page
+        description: Limit
         in: query
         name: limit
         type: integer
@@ -224,7 +362,63 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/internal_user.UserResponseDTO'
+                    $ref: '#/definitions/internal_banner.BannerResponse'
+                  type: array
+                limit:
+                  type: integer
+                next_page:
+                  type: integer
+                page:
+                  type: integer
+                prev_page:
+                  type: integer
+                total:
+                  type: integer
+                total_pages:
+                  type: integer
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
+      security:
+      - ApiKeyAuth: []
+      - BearerAuth: []
+      summary: Get banner by user id
+      tags:
+      - Banner
+  /api/v1/users/greetings:
+    get:
+      description: Get user greeting
+      parameters:
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Number of items per page
+        in: query
+        name: limit
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/line-bk-api_pkg_utils.AppPaginationResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/internal_user.UserGreetingResponseDTO'
                   type: array
                 limit:
                   type: integer
@@ -232,43 +426,6 @@ paths:
                   type: integer
                 total:
                   type: integer
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/line-bk-api_pkg_utils.AppError'
-            - properties:
-                code:
-                  type: integer
-                message:
-                  type: string
-              type: object
-      summary: Get all users
-      tags:
-      - Users
-  /api/v1/users/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get a user by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/line-bk-api_pkg_utils.AppResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/internal_user.UserResponseDTO'
               type: object
         "404":
           description: Not Found
@@ -292,10 +449,13 @@ paths:
                 message:
                   type: string
               type: object
-      summary: Get a user by ID
+      security:
+      - BearerAuth: []
+      - ApiKeyAuth: []
+      summary: Get user greeting
       tags:
       - Users
-  /api/v1/users/me:
+  /api/v1/users/profile/me:
     get:
       consumes:
       - application/json
@@ -336,12 +496,18 @@ paths:
               type: object
       security:
       - BearerAuth: []
+      - ApiKeyAuth: []
       summary: Get my profile
       tags:
       - Users
 securityDefinitions:
+  ApiKeyAuth:
+    description: The API key for the LINE BK API.
+    in: header
+    name: X-API-KEY
+    type: apiKey
   BearerAuth:
-    description: Type "Bearer" followed by a space and JWT token.
+    description: Enter the token with the prefix **"Bearer "**, e.g., "Bearer {your_token}"
     in: header
     name: Authorization
     type: apiKey
