# internal/user/dto.go
@@ -13,3 +13,7 @@ type CreateUserRequestDTO struct {
 	UserID string `json:"user_id"`
 	Name   string `json:"name"`
 }
+
+type UserGreetingResponseDTO struct {
+	Greeting string `json:"greeting"`
+}
