# internal/user/route.go
@@ -6,15 +6,16 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-func RegisterRoutes(app *fiber.App, userHandler UserHandler) {
+func RegisterUserRoutes(app *fiber.App, userHandler UserHandler) {
 	v1 := app.Group("/api/v1")
 	userRoutes := v1.Group("/users")
 
-	// Public routes
-	userRoutes.Get("/", userHandler.GetUsers)
-	userRoutes.Get("/:id", userHandler.GetUserByID)
+	// todo : for admin dashboard
+	// userRoutes.Get("/", userHandler.GetUsers)
+	// userRoutes.Get("/:id", userHandler.GetUserByID)
 
 	// Protected routes
-
-	userRoutes.Get("/me", userHandler.GetMyProfile, middleware.AuthMiddleware)
+	userRoutes.Use(middleware.AuthMiddleware())
+	userRoutes.Get("/profile/me", userHandler.GetMyProfile)
+	userRoutes.Get("/greetings", userHandler.GetUserGreeting)
 }
